# RA2Snes

./: .gitignore  .gitmodules  CMakeLists.txt  COMPILING.md  FUTURE.md  README.md  achievementmodel.cpp  achievementmodel.h  achievementsortfilterproxymodel.cpp  achievementsortfilterproxymodel.h  gameinfomodel.cpp  gameinfomodel.h  main.cpp  memoryreader.cpp  memoryreader.h  networkcachemanager.cpp  networkcachemanager.h  queueworker.cpp  queueworker.h  ra2snes.cpp  ra2snes.h  ra2snes.qrc  ra2snes.rc  ra2snes.ui  ra_client.cpp  ra_client.h  ra_client_old.cpp  ra_client_old.h  ra_palette.xml  raclient.cpp  raclient.h  rastructs.h  rawebclient.cpp  rawebclient.h  shell.nix  ui.qrc  updater.cpp  updater.h  updater_main.cpp  usb2snes.cpp  (+4 more)
.github/workflows/: build-RA2Snes.yml  build-linux.yml  build-macos.yml  build-windows.yml  build.yml
ui/: Icon.qml  banner.qml  compact.qml  errormessage.qml  icons.qml  listview.qml  login.qml  mainwindow.qml  noncompact.qml  popupmenu.qml  progressbar.qml  refreshbutton.qml  sorting.qml  updatedialog.qml
ui/themes/: Black.qml  Dark.qml  Light.qml  Test.qml
